...
      Padding(
          padding: EdgeInsets.only(top: 300, left: 30, right: 30, bottom: 10),
          child: TextField(
              decoration: InputDecoration(
                  border: OutlineInputBorder(
                      borderRadius: BorderRadius.all(Radius.circular(0)))),
              key: Key('btc-textfield'),
              keyboardType: TextInputType.number,
              onChanged: (enteredBTC) {
                _setcurrentBTCValue(enteredBTC);
                /* setState(() async {
                  if (double.tryParse(enteredBTC) == null ||
                      double.tryParse(enteredBTC) <= 0.00) {
...
                  }
                });*/
              })),
      Container(
          width: 200,
          child: ElevatedButton(
              key: Key('btc-button-one'),
              style: ElevatedButton.styleFrom(
                  primary: Colors.grey,
                  shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(20))),
              onPressed: () {
                Navigator.pushReplacement(
...
